# agentic-kernel-testing

./: .env.example  .gitignore  ADVANCED_BUILD_CONFIG_IMPLEMENTATION.md  AI_GENERATION_ERROR_FIX_SUMMARY.md  AI_GENERATION_NOT_IMPLEMENTED_FIX.md  API_INTEGRATION_GUIDE.md  AUTH_FIX_SUMMARY.md  BOOTLOADER_DEPLOYMENT_FEATURE.md  BUILD_EXECUTION_ARCHITECTURE.md  BUILD_FLOW_VISUALIZATION_COMPLETE.md  BUILD_JOB_EXECUTION_COMPLETE.md  BUILD_JOB_MANAGER_INTEGRATION.md  BUILD_SERVER_PERSISTENCE_FIX.md  BUILD_TEMPLATE_MANAGEMENT_COMPLETE.md  BUILD_TEMPLATE_QUICK_GUIDE.md  BULK_DELETE_RESTORED_FINAL.md  CHANGELOG.md  COMPREHENSIVE_EXECUTION_FIX.md  CUSTOM_BUILD_COMMANDS_COMPLETE.md  CUSTOM_BUILD_COMMANDS_FEATURE.md  CUSTOM_BUILD_COMMANDS_QUICK_REFERENCE.md  CUSTOM_BUILD_MINIMAL_GUIDE.md  CUSTOM_BUILD_QUICK_START.md  DASHBOARD_RESTART_COMPLETE.md  DELETE_FUNCTIONALITY_FULLY_RESTORED.md  DELETE_FUNCTIONALITY_RESTORED_SUMMARY.md  DEPLOYMENT_DASHBOARD_FIX_REPORT.md  DEPLOYMENT_GUI_TEST_REPORT.md  DEPLOYMENT_TITLE_UPDATE.md  ENV_VARS_REORGANIZATION.md  EXECUTION_CONTROL_GUIDE.md  EXECUTION_FLOW_COMPLETE_FIX.md  EXECUTION_FLOW_FIX.md  EXECUTION_TEST_RELATIONSHIP_GUIDE.md  FINAL_DEPLOYMENT_GUI_STATUS.md  FINAL_GUI_TEST_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_TEST_EXECUTION_FIX_SUMMARY.md  FINAL_TROUBLESHOOTING_STEPS.md  FLOWCHART_IMPROVEMENTS_COMPLETE.md  (+272 more)
ai_generator/: Dockerfile  README.md  __init__.py  gap_targeted_generator.py  interfaces.py  kernel_driver_generator.py  llm_providers.py  llm_providers_extended.py  models.py  test_generator.py  test_organizer.py
analysis/: Dockerfile  README_HISTORICAL_DB.md  __init__.py  baseline_manager.py  code_analyzer.py  compatibility_matrix.py  coverage_analyzer.py  coverage_trend_tracker.py  coverage_visualizer.py  fix_suggestion_generator.py  git_bisect_runner.py  git_integration.py  historical_failure_db.py  performance_dashboard.py  performance_monitor.py  performance_trend_tracker.py  regression_detector.py  root_cause_analyzer.py  security_report_generator.py  (+1 more)
(+821 files in other folders)
