[tool.poetry]
name = "agentic-kernel-testing"
version = "1.0.0"
description = "Agentic AI Testing System for Linux Kernel and BSP - Production Ready"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "ai_generator" },
    { include = "orchestrator" },
    { include = "execution" },
    { include = "analysis" },
    { include = "integration" },
]

[tool.poetry.dependencies]
python = "^3.10"
# AI and LLM
openai = "^1.0.0"
anthropic = "^0.7.0"
# Testing frameworks
pytest = "^7.4.0"
hypothesis = "^6.92.0"
# Data and APIs
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
# Utilities
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
# Code analysis
gitpython = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.7.0"
pylint = "^3.0.0"
black = "^23.11.0"
isort = "^5.12.0"
types-pyyaml = "^6.0.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.hypothesis]
max_examples = 100
deadline = None

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
